@@ -110,11 +110,15 @@
             </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
                 <configuration>
                     <source>22</source>
                     <target>22</target>
                     <compilerArgs>
-                        <arg>--add-exports</arg><arg>java.base/jdk.internal.vm.annotation=ALL-UNNAMED</arg>
+                        <args>--add-exports</args>
+                        <args>java.base/jdk.internal.misc=ALL-UNNAMED</args>
+                        <args>--add-exports</args>
+                        <args>java.base/jdk.internal.vm.annotation=ALL-UNNAMED</args>
                     </compilerArgs>
                 </configuration>
             </plugin>
@@ -122,7 +126,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                    <argLine>--add-exports java.base/jdk.internal.misc=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
 
